Crawler Web (de)serialization/config refactor.